eos-deployment-manifests/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eos-registry-api
spec:
  rules:
  - host: registry.339713094217.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eos-registry-api-service
            port:
              number: 8761
  ingressClassName: nginx
